Changed List.of to Collections.singletonList in recipe provider